Fixed vertical spacing

--- a/scss/_campaign.scss
+++ b/scss/_campaign.scss
@@ -756,7 +756,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin-top: 8px;
+        margin-top: 24px;
         
         @include tablet-and-up {
             flex-direction: row;
